devolutions-rdp: add AudioUnit.framework on macOS

--- a/DevolutionsRdp/CMakeLists.txt
+++ b/DevolutionsRdp/CMakeLists.txt
@@ -81,10 +81,12 @@ endif()
 if(APPLE AND NOT IOS)
 	find_library(CORE_AUDIO CoreAudio)
 	find_library(AUDIO_TOOLBOX AudioToolbox)
+	find_library(AUDIO_UNIT AudioUnit)
 	find_library(CORE_FOUNDATION CoreFoundation)
 	find_library(CORE_SERVICES CoreServices)
 	target_link_libraries(${MODULE_NAME} "${CORE_AUDIO}")
 	target_link_libraries(${MODULE_NAME} "${AUDIO_TOOLBOX}")
+	target_link_libraries(${MODULE_NAME} "${AUDIO_UNIT}")
 	target_link_libraries(${MODULE_NAME} "${CORE_FOUNDATION}")
 	target_link_libraries(${MODULE_NAME} "${CORE_SERVICES}")
 endif()
